# fmlpack

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  fml-spec.md  fmlpack-spec.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  coverage.yml
src/: fmlpack.py
tests/: test_fmlpack.py
